Bug 13458 - Handle lease downgrade not happing when unlink occurs
Summary: Handle lease downgrade not happing when unlink occurs
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.8.2
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Ralph Böhme
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks: 15608
  Show dependency treegraph
 
Reported: 2018-05-31 10:43 UTC by Guenther Deschner
Modified: 2025-04-02 14:37 UTC (History)
4 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Guenther Deschner 2018-05-31 10:43:14 UTC
When deleting a file, all leases granting handle caching lease to the file should be recalled (as it is happening on Windows). In Samba this is not the case.
Comment 1 Ralph Böhme 2022-02-27 20:28:38 UTC
Searching MS-FSA for "2.1.4.12" (Algorithm to Check for an Oplock Break) it seems there's more missing, eg in

2.1.5.16 Server Requests Setting of Security Information

ie when a client sets a DACL we should check for H breaks.
Comment 2 Ralph Böhme 2024-09-10 03:42:10 UTC
We'll also need this for Directory Leases, looking...
Comment 3 Samba QA Contact 2024-11-05 15:52:05 UTC
This bug was referenced in samba master:

aaa9e60ddbcd7c905699739c9d70cb71bc2f74bc
67f560133744eaee9793562f0b48a67ea4221243
6cc25159d5a0b5be024629467b866939dd667036
9e13780a8fc48ae8eeda9b14fe72e828166edb3d
Comment 4 Ralph Böhme 2025-04-02 14:37:48 UTC
Fixed in 4.22.